--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ article {
     border: 1px solid #000;
     background-color: #39394a;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px 20px;
 }
 
 .menuItem {
